<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">寻物启事</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="loading_text">加载中…</string>
    <string name="loading_error_text">出现错误—</string>
    <string name="btn_error_retry">再试试</string>
    <string name="btn_empty_retry">再试试</string>
    <string name="empty_message">什么也没有</string>
    <string name="network_error">请检查您的网络</string>
    <string name="http_error">请求过程中出现错误</string>
    <string name="conversion_error">数据解析出错</string>
    <string name="unexpected_error">发生未知错误</string>
    <string name="tpl_version">当前版本: %s</string>
    <string name="msg_checking_version">检查中…</string>
    <string name="msg_no_new_version">没有新版本UﾟｪﾟU</string>
    <string name="msg_new_version_found" formatted="false">新版本:%s(Build %d):%s</string>
    <string name="action_share">分享</string>
    <string name="share_text">"寻物启事"一个公益的平台，如果你捡到或者丢失什么。或许你可以试试它！</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>

    <string name="about_title">关于我们</string>
    <string name="about_content">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;关于功能：正如你所见，这是一个免费公益的平台，寻物表示他人已经寻找到的信息，启事表示你需要寻找的东西。该软件是作者于大年初一钥匙掉了之后，因无处寻找，痛定思痛之后，和后台的基友一起呕心沥血做出来的，
        宗旨在于让大家至少有一个可以发布的小平台，仅此而已。

    </string>
    
    <string name="about_design">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;关于设计：因为这个软件的作者是一个审美渣，所以，请你不要伤害他脆弱的心灵。与其吐槽它，不如帮助它。公益事业，舍你其谁。</string>
    <string name="about_team">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;参与人员：\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;后台：CY\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;android客户端：颜</string>
    <string name="about_contect">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;联系我们：如果你有意见或者建议，并且不收费的那种，你可以试着联系我们：644613693@qq.com</string>

</resources>
