<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >



<LinearLayout
    android:gravity="center_horizontal"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/about_title"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:textSize="16sp"
        android:text="@string/about_content"
        android:layout_width="wrap_content"
        style="@style/AboutStyle"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_marginTop="24dp"
        style="@style/AboutStyle"
        android:text="@string/about_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:layout_marginTop="24dp"
        android:text="@string/about_contect"
        android:layout_width="wrap_content"
        style="@style/AboutStyle"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_marginTop="24dp"
        android:text="@string/about_team"
        style="@style/AboutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>

</android.support.v4.widget.NestedScrollView>